--- a/_sass/elements.base.scss
+++ b/_sass/elements.base.scss
@@ -10,6 +10,10 @@ body {
     line-height: $lh-copy;
     color: $brand;
     height: 100%;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 
