removed header ani exception

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header {{ page.header }} js-header a a-fi-down {{ page.header-animation }}">
+<header class="header {{ page.header }} js-header a a-fi-down a-del-50 a-eo">
     <div class="container header__container">
         <a href="/" aria-label="Logo Ziris" class="js-intro-header">
             <div class="header__logo">
