--- a/_sass/components.intro.scss
+++ b/_sass/components.intro.scss
@@ -11,7 +11,7 @@
     }
 
     @include respond-min($xl) {
-        display: flex;
+        @include center(flex);
         position: relative;
         height: 100vh;
     }
@@ -24,6 +24,8 @@
 .intro__bg {
     position: absolute;
     width: 100%;
+    top: 0;
+    left:0;
     background-color: $brand;
 
     @include respond-min($xxl) {
@@ -40,15 +42,14 @@
     position: relative;
     z-index: 1;
     padding-top: $section-padding-s;
-    margin: 0 auto space(8);
-    justify-self: center;
+    margin-bottom: space(8);
 
     @include respond-min($xl) {
         display: grid;
         grid-template-columns: 3fr 4fr;
         column-gap: 80px;
         align-items: center;
-        margin-bottom: 0;
+        margin: 12px auto 0; // margin top = correction for caption
         padding: 0 space(12);
     }
 }
@@ -82,7 +83,7 @@
 .intro__img {
     object-fit: cover;
     width: 100%;
-    height: calc(100% - 30px);
+    height: calc(100% - 24px);
 }
 
 .intro__figcaption {
