--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,7 @@
     <script src="/assets/js/map.js"></script>
     <script src="/assets/js/nav.js"></script>
     <script src="/assets/js/intro.js"></script>
+    <script src="/assets/js/pattern.js"></script>
     <script src="/assets/js/cursor.js"></script>
     <script src="/assets/js/gallery.js"></script>
     <script>
