--- a/_sass/components.gallery.scss
+++ b/_sass/components.gallery.scss
@@ -61,6 +61,7 @@
 }
 
 .gallery__img-container {
+    position: relative;
     margin-bottom: 6px;
     height: 100%;
 }
@@ -71,6 +72,26 @@
     width: auto;
     height: 100%;
     object-fit: cover;
+}
+
+.gallery__img-loader {
+    background-color: $grey-9;
+    @include full(absolute);
+    @include center(flex);
+    transition: $fade-all;
+
+    &:after {
+        content: '';
+        display: block;
+        width: space(6);
+        height: space(6);
+        border: 1px solid rgba($brand, 0.5);
+        animation: rotate 1500ms $ease infinite;
+    }
+
+    &.is-hidden {
+        opacity: 0;
+    }
 }
 
 .gallery__author {
