major update animations for rest of the pages

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,12 +1,12 @@
 <section class="cta js-scroll tr-stag js-tr">
     <div class="container container--s">
         <header>
-            <label class="cta__label tr-stag js-tr">schrijf je in voor:</label>
-            <h3 class="cta__title tr-stag js-tr">{{ page.title }}</h3>
-            <p class="cta__description tr-stag js-tr">
+            <label class="cta__label tr-stag js-tr js-split-text">schrijf je in voor:</label>
+            <h3 class="cta__title tr-stag js-tr js-split-text">{{ page.title }}</h3>
+            <p class="cta__description tr-stag js-tr js-split-text">
                 {{ site.data.convince.text }}
             </p>
-            <div class="mt-6 tr-stag js-tr">
+            <div class="mt-6 tr-fi-left tr-1500 tr-del-350 js-tr">
                 <a href="/inschrijven" class="button button--l">
                     ja ik wil inschrijven
                 </a>
