--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,15 +2,15 @@
 layout: default
 ---
 
-<section class="post a a-fi">
+<section class="post">
     <div class="container">
         <div class="post__container">
             <header class="post__header">
-                <h1 class="post__title js-set-data" id="course-title">
+                <h1 class="post__title js-scroll js-split-text js-set-data" id="course-title" data-stag="0.03">
                     {{ page.title | downcase }}
                 </h1>
             </header>
-            <div class="post__content rich-text">
+            <div class="post__content rich-text a a-fi a-del-200">
                 {{ content }}
             </div>
         </div>
