--- a/_layouts/galerie.html
+++ b/_layouts/galerie.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<div class="gallery a a-fi-right-200px a-del-500 a-dur-1000">
+<div class="gallery">
     <div class="gallery__scroll-container js-gallery">
 
-        <div class="gallery__tile gallery__tile--start">
+        <div class="gallery__tile gallery__tile--start a a-fi-right-200px a-eo">
             <h1 class="fw-900 f32 f48@m f72@l lh-solid mb-2 mb-4@m">
                 foto's van cursisten
             </h1>
@@ -15,7 +15,7 @@ layout: default
         </div>
 
         {% for entry in page.items %}
-        <div class="gallery__tile js-gallery-scroll" id="js-gallery-scroll-{{ forloop.index }}">
+        <div class="gallery__tile js-gallery-item a a-fi-right-200px a-del-200 a-eo" id="js-gallery-item-{{ forloop.index }}">
             <figure class="gallery__img-container js-tr tr-stag tr-stag--right">
                 <img class="gallery__img" src="#" data-src="{{ entry.img }}" alt="{{ entry.author }}" />
                 <div class="gallery__img-loader"></div>
@@ -32,7 +32,7 @@ layout: default
         </div>
         {% endfor %}
 
-        <div class="gallery__tile gallery__tile--finish js-gallery-scroll">
+        <div class="gallery__tile gallery__tile--finish js-gallery-item">
             <h2 class="fw-900 f32 f48@m f72@l lh-solid mb-2 mb-4@m js-tr tr-stag tr-stag--right">
                 einde
             </h2>
