--- a/_sass/utilities.transitions.scss
+++ b/_sass/utilities.transitions.scss
@@ -29,7 +29,9 @@
     $d: $x * 1ms;
 
     .tr-#{$x} {
-        transition: all #{$d} $ease;
+        transition-property: all;
+        transition-duration: #{$d};
+        transition-timing-function: $ease-out;
     }
 
     .tr-del-#{$x} {
@@ -51,7 +53,26 @@
 .tr-fi-up {
     opacity: 0;
     transform: translateY(50px) rotate(1deg);
-    transition-timing-function: $ease-out;
+
+    &.is-active {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.tr-fi-right {
+    opacity: 0;
+    transform: translateX(50px) rotate(1deg);
+
+    &.is-active {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.tr-fi-left {
+    opacity: 0;
+    transform: translateX(-50px) rotate(1deg);
 
     &.is-active {
         opacity: 1;
@@ -77,7 +98,6 @@
     opacity: 0;
     transform: scaleX(0);
     transform-origin: 0 0;
-    transition-timing-function: $ease-out;
 
     &.is-active {
         opacity: 1;
@@ -94,7 +114,7 @@
             opacity: 0;
             transform-origin: 0 0;
             transform: translateY(20px + $i * 8) rotate(1deg);
-            transition: all (900ms + ($i * 150)) $ease-out;
+            transition-duration: (900ms + ($i * 150));
 
             &.is-active {
                 opacity: 1;
