--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,7 +5,7 @@ layout: default
 <section class="section pb-8 pb-12@m">
     <div class="container">
         <div class="about__container">
-            <header class="about__header a a-fi js-scroll js-split-text" data-stag="0.02">
+            <header class="about__header v-hidden js-scroll js-split-text" data-stag="0.02">
                 <h1 class="about__title">
                     {{ page.title }}
                 </h1>
