--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
     <div class="container">
         <div class="post__container">
             <header class="post__header">
-                <h1 class="post__title js-scroll js-split-text js-set-data" id="course-title" data-stag="0.03">
+                <h1 class="post__title v-hidden js-scroll js-split-text js-set-data" id="course-title" data-stag="0.03">
                     {{ page.title | downcase }}
                 </h1>
             </header>
