refine pattern animation

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,8 @@ layout: default
 <section class="post">
     <div class="container">
         <div class="post__container">
-            <header class="post__header">
-                <h1 class="post__title v-hidden js-scroll js-split-text js-set-data" id="course-title" data-stag="0.03">
+            <header class="post__header v-hidden js-scroll js-split-text" data-stag="0.03">
+                <h1 class="post__title js-set-data" id="course-title">
                     {{ page.title | downcase }}
                 </h1>
             </header>
