update button accessibility

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,7 @@
                 </span>
             </a>
 
-            <button class="header__item header__item--icon hidden@m">
+            <button class="header__item header__item--icon hidden@m" aria-label="menu navigatie">
                 <span class="hamburger js-nav-toggle">
                     <span class="hamburger__line"></span>
                     <span class="hamburger__line"></span>
