--- a/_sass/settings.variables.scss
+++ b/_sass/settings.variables.scss
@@ -46,7 +46,7 @@ $white: #fff;
 $brand: #780080;
 $brand-dark: mix($black, $brand, 15%);
 
-$cta: #009FEA;
+$cta: #0076dd;
 $cta-dark: mix($black, $cta, 15%);
 
 $light: $white;
