changes cursussen to aanbod

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,10 +13,10 @@
                 </span>
             </a>
 
-            <a href="/cursussen" aria-label="cursussen">
+            <a href="/aanbod" aria-label="aanbod">
                 <span class="header__item button button--header
-                {% if page.url == '/cursussen.html' %}is-active{% endif %}">
-                    cursussen
+                {% if page.url == '/aanbod.html' %}is-active{% endif %}">
+                    aanbod
                 </span>
             </a>
 
@@ -46,7 +46,7 @@
     <div class="header-mobile js-nav">
         <nav>
             <a href="/galerie" aria-label="galerie" class="header-mobile__item js-nav-item">galerie</a>
-            <a href="/cursussen" aria-label="cursussen" class="header-mobile__item js-nav-item">cursussen</a>
+            <a href="/aanbod" aria-label="aanbod" class="header-mobile__item js-nav-item">aanbod</a>
             <a href="/over-ziris" aria-label="over ziris" class="header-mobile__item js-nav-item">over ziris</a>
             <a href="/contact" aria-label="contact" class="header-mobile__item js-nav-item">contact</a>
         </nav>
