update about links

--- a/_sass/objects.rich-text.scss
+++ b/_sass/objects.rich-text.scss
@@ -19,6 +19,10 @@
         @include font(18px, 700, $lh-copy);
     }
 
+    a {
+        text-decoration: underline;
+    }
+
     p,
     ul,
     ol {
