--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,10 +54,12 @@
     {% endif %}
     <script src="/assets/js/plugins.bundle.min.js"></script>
     <script src="/assets/js/generic.js"></script>
+    <script src="/assets/js/animations.js"></script>
+    <script src="/assets/js/discover.js"></script>
+    <script src="/assets/js/revealOnScroll.js"></script>
     <script src="/assets/js/form.js"></script>
     <script src="/assets/js/map.js"></script>
     <script src="/assets/js/nav.js"></script>
-    <script src="/assets/js/animations.js"></script>
     <script src="/assets/js/cursor.js"></script>
     <script src="/assets/js/gallery.js"></script>
     <script>
