add img-loader placeholder

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,7 @@
     <script src="/assets/js/animations.js"></script>
     <script src="/assets/js/discover.js"></script>
     <script src="/assets/js/revealOnScroll.js"></script>
+    <script src="/assets/js/imgLoader.js"></script>
     <script src="/assets/js/form.js"></script>
     <script src="/assets/js/map.js"></script>
     <script src="/assets/js/nav.js"></script>
