--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,6 +32,7 @@
 @import "components.hamburger";
 @import "components.header";
 @import "components.intro";
+@import "components.img-loader";
 @import "components.map";
 @import "components.member";
 @import "components.meta";
