gallery placeholder img

--- a/_includes/img-loader.html
+++ b/_includes/img-loader.html
@@ -5,7 +5,7 @@
     <!-- placeholder image width: 100px @ scaled up to 100% -->
     <!-- –––––––––––––––––––––––––––––––––– -->
 
-    {% if jekyll.environment == "developments" %}
+    {% if jekyll.environment == "development" %}
 
         <div class="img-loader__placeholder
                     img-loader__placeholder--dev js-img-loader-placeholder"></div>
