--- a/_sass/components.gallery.scss
+++ b/_sass/components.gallery.scss
@@ -68,29 +68,12 @@
 
 .gallery__img {
     max-width: none;
-    min-width: 100vh;
     width: auto;
     height: 100%;
     object-fit: cover;
-}
-
-.gallery__img-loader {
-    background-color: $grey-9;
-    @include full(absolute);
-    @include center(flex);
-    transition: $fade-all;
-
-    &:after {
-        content: '';
-        display: block;
-        width: space(6);
-        height: space(6);
-        border: 1px solid rgba($brand, 0.5);
-        animation: rotate 1500ms $ease infinite;
-    }
 
     &.is-hidden {
-        opacity: 0;
+        display: none;
     }
 }
 
