--- a/_includes/img-loader.html
+++ b/_includes/img-loader.html
@@ -5,15 +5,15 @@
     <!-- placeholder image width: 100px @ scaled up to 100% -->
     <!-- –––––––––––––––––––––––––––––––––– -->
 
-    {% if jekyll.environment == "development" %}
+    {% if jekyll.environment == "developments" %}
 
         <div class="img-loader__placeholder
-                    img-loader__placeholder--dev js-img-loader-placeholder"></div>
+                    img-loader__item--dev  js-img-loader-placeholder"></div>
 
     {% else %}
 
         {% thumb src=include.img width="100" link=false alt=include.alt
-                class="img-loader__placeholder js-img-loader-placeholder" %}
+                class="img-loader__item  js-img-loader-placeholder" %}
 
     {% endif %}
 
@@ -21,7 +21,7 @@
     <!-- –––––––––––––––––––––––––––––––––– -->
     <!-- the actual image -->
     <!-- –––––––––––––––––––––––––––––––––– -->
-    <img data-src="{{ include.img }}" src="#" alt="{{ include.alt }}" class="img-loader__item js-img-loader-item">
+    <img data-src="{{ include.img }}" src="#" alt="{{ include.alt }}" class="img-loader__item  is-hidden  js-img-loader-item">
 
 
 </div>
