--- a/_sass/components.img-loader.scss
+++ b/_sass/components.img-loader.scss
@@ -3,25 +3,15 @@
 }
 
     .img-loader__item {
-        display: none;
-        width: 100%;
-
-        &.is-visible {
-            display: block;
-        }
-    }
-    
-
-    .img-loader__placeholder {
         width: 100%;
         height: auto;
-    
+
         &.is-hidden {
             display: none;
         }
     }
 
-    .img-loader__placeholder--dev {
+    .img-loader__item--dev {
         background-color: $grey-8;
         height: 80vh;
     }
