--- a/_includes/img-loader.html
+++ b/_includes/img-loader.html
@@ -5,16 +5,15 @@
     <!-- placeholder image width: 100px @ scaled up to 100% -->
     <!-- –––––––––––––––––––––––––––––––––– -->
 
-    {% if jekyll.environment == "developments" %}
+    {% if jekyll.environment == "development" %}
 
-        <div class="img-loader__placeholder
-                    img-loader__item--dev  js-img-loader-placeholder"></div>
+        <div class="img-loader__item  img-loader__item--dev  js-img-loader-placeholder"></div>
 
     {% else %}
 
         {% thumb src=include.img width="100" link=false alt=include.alt
                 class="img-loader__item  js-img-loader-placeholder" %}
-
+                
     {% endif %}
 
 
