add caption centeren | start becomes aanvang

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -5,7 +5,7 @@
             {% include meta__row.html label='aantal' entry='amount' %}
             {% include meta__row.html label='prijs' entry='price' %}
             {% include meta__row.html label='inclusief' entry='inc' %}
-            {% include meta__row.html label='start' entry='start' %}
+            {% include meta__row.html label='aanvang' entry='start' %}
             {% include meta__row.html label='tijdstip' entry='time' %}
             {% include meta__row.html label='locatie' entry='location' %}
         </div>
