add cta to intro post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,11 @@ layout: default
             <div class="post__content rich-text a a-fi a-del-200">
                 {{ content }}
             </div>
+            <div class="mt-6 mb-12 js-scroll tr-fi-up tr-1500 js-tr">
+                <a href="/inschrijven" class="button button--l a a-fi a-del-200">
+                    ja ik wil inschrijven
+                </a>
+            </div>
         </div>
     </div>
     <figure class="container js-scroll">
