--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,4 +1,4 @@
-<div class="meta js-scroll">
+<div class="meta js-meta js-scroll">
     <div class="container container--m">
         <div class="meta__container tr-stag js-tr">
             {% include meta__row.html label='soort les' entry='type' %}
