--- a/_includes/formfield.html
+++ b/_includes/formfield.html
@@ -5,5 +5,6 @@
     <input class="signup__input {{ include.class }}" 
         id="{{ include.id }}" placeholder="{{ include.label }}" type="{{ include.type }}"
         name="{{ include.id }}" {{ include.required }}
-        {% if include.minlength %}minlength="{{ include.minlength }}"{% endif %} >
+        {% if include.minlength %}minlength="{{ include.minlength }}"{% endif %}
+        {% if include.value %}value="{{ include.value }}"{% endif %} >
 </div>
